# zxTunePascal

./: .gitignore  CMakeLists.txt  build.sh  mingw-w32-x86_64.cmake  mingw-w64-x86_64.cmake  readme.md
binding/: libraudio.pas  libzxtune.pas
binding/backup/: libraudio.pas.bak  libzxtune.pas.bak
build64/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/: ZxPlay.lpi  ZxPlay.lpr  ZxPlay.lps
examples/backup/: ZxPlay.lps
examples/lib/x86_64-linux/: ZxPlay.compiled  libzxtune.ppu
examples/lib/x86_64-win64/: ZxPlay.compiled  libzxtune.ppu
zxtune-r4310/libzxtune/: zxtune.h
zxtune-r4310/libzxtune/src/: zxtune.cpp  zxtune.cpp.tar
zxtune-r4310/src/core/plugins/players/: plugins_list.h
zxtune-r4310/src/strings/src/: encoding.cpp
